--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         </svg>
     </button>
 
-    <!-- Cursor Trail -->
     <!-- Glowing Custom Cursor -->
-<div id="glowing-cursor"></div>
+    <div id="glowing-cursor"></div>
+
     <!-- Click Effect Canvas -->
-<canvas id="click-effect"></canvas>
+    <canvas id="click-effect"></canvas>
 
     <main class="container">
         <div class="card">
@@ -61,7 +61,7 @@
             </section>
 
             <section class="section">
-                <h2 class="section-title">LINKS</h2>
+                <h2 class="section-title">CONNECT</h2>
                 <div class="social-grid">
                     <a href="https://discord.com/users/823914932185202728" class="social-btn">
                         <img src="https://cdn.simpleicons.org/discord" alt="Discord" class="social-icon">
@@ -117,15 +117,16 @@
                 <hr class="divider">
             </section>
 
-            <!-- Footer inside card -->
+            <!-- Footer -->
             <footer class="footer">
                 <p>Open source on my <a href="https://github.com/Virenvooo/" target="_blank">GitHub</a> — feel free to use it, modify it, or get inspired! ✨</p>
             </footer>
         </div>
     </main>
 
-    <!-- Particles.js -->
+    <!-- Scripts -->
     <script>
+        // Particles.js
         particlesJS("particles-js", {
             "particles": {
                 "number": { "value": 80, "density": { "enable": true, "value_area": 800 } },
@@ -159,10 +160,8 @@
             },
             "retina_detect": true
         });
-    </script>
 
-    <!-- Theme Toggle -->
-    <script>
+        // Theme Toggle
         const toggle = document.querySelector('.theme-toggle');
         const icon = document.getElementById('theme-icon');
         const body = document.body;
@@ -184,72 +183,45 @@
                 icon.innerHTML = '<path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>';
             }
         });
-    </script>
 
-    <!-- Cursor Trail + 3D Avatar Tilt -->
-    <script>
-        // Cursor Trail
-        const canvas = document.getElementById('cursor-trail');
-        const ctx = canvas.getContext('2d');
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-
-        let particles = [];
-        const particleColor = '#E246A1';
-
-        let mouseX = 0;
-        let mouseY = 0;
+        // Glowing Custom Cursor
+        const cursor = document.getElementById('glowing-cursor');
+        let currentX = 0;
+        let currentY = 0;
+        let targetX = 0;
+        let targetY = 0;
+        const easing = 0.25;
 
         document.addEventListener('mousemove', (e) => {
-            mouseX = e.clientX;
-            mouseY = e.clientY;
+            targetX = e.clientX;
+            targetY = e.clientY;
         });
 
-        window.addEventListener('resize', () => {
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-        });
+        function animateCursor() {
+            currentX += (targetX - currentX) * easing;
+            currentY += (targetY - currentY) * easing;
 
-        class Particle {
-            constructor() {
-                this.x = mouseX;
-                this.y = mouseY;
-                this.size = Math.random() * 4 + 1;
-                this.speedX = Math.random() * 3 - 1.5;
-                this.speedY = Math.random() * 3 - 1.5;
-                this.life = 30;
-            }
+            cursor.style.left = currentX + 'px';
+            cursor.style.top = currentY + 'px';
 
-            update() {
-                this.x += this.speedX;
-                this.y += this.speedY;
-                this.life--;
-                this.size *= 0.95;
-            }
-
-            draw() {
-                ctx.beginPath();
-                ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
-                ctx.fillStyle = particleColor;
-                ctx.shadowBlur = 15;
-                ctx.shadowColor = particleColor;
-                ctx.globalAlpha = this.life / 30;
-                ctx.fill();
-                ctx.globalAlpha = 1;
-            }
+            requestAnimationFrame(animateCursor);
         }
 
-        function animateTrail() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            if (Math.random() < 0.7) particles.push(new Particle());
-            particles.forEach((p, i) => {
-                p.update();
-                p.draw();
-                if (p.life <= 0 || p.size <= 0.2) particles.splice(i, 1);
+        animateCursor();
+
+        document.body.addEventListener('mouseenter', () => cursor.style.opacity = '1');
+        document.body.addEventListener('mouseleave', () => cursor.style.opacity = '0');
+
+        document.querySelectorAll('a, .pill, .social-btn, .avatar-wrapper, .theme-toggle').forEach(el => {
+            el.addEventListener('mouseenter', () => {
+                cursor.style.transform = 'translate(-50%, -50%) scale(1.6)';
+                cursor.style.boxShadow = '0 0 30px #E246A1, 0 0 60px rgba(226, 70, 161, 1), 0 0 90px rgba(226, 70, 161, 0.6)';
             });
-            requestAnimationFrame(animateTrail);
-        }
-        animateTrail();
+            el.addEventListener('mouseleave', () => {
+                cursor.style.transform = 'translate(-50%, -50%) scale(1)';
+                cursor.style.boxShadow = '0 0 20px #E246A1, 0 0 40px rgba(226, 70, 161, 0.8), 0 0 60px rgba(226, 70, 161, 0.4)';
+            });
+        });
 
         // 3D Avatar Tilt
         const avatarWrapper = document.querySelector('.avatar-wrapper');
@@ -273,101 +245,64 @@
                 avatar.style.transform = 'rotateY(0) rotateX(0) scale(1)';
             });
         }
-    </script>
 
-    <script>
-// Click Effect - Purple Neon Particles Burst
-const clickCanvas = document.getElementById('click-effect');
-const clickCtx = clickCanvas.getContext('2d');
-clickCanvas.width = window.innerWidth;
-clickCanvas.height = window.innerHeight;
+        // Click Effect
+        const clickCanvas = document.getElementById('click-effect');
+        const clickCtx = clickCanvas.getContext('2d');
+        clickCanvas.width = window.innerWidth;
+        clickCanvas.height = window.innerHeight;
 
-let clickParticles = [];
+        let clickParticles = [];
 
-document.addEventListener('click', (e) => {
-    const x = e.clientX;
-    const y = e.clientY;
+        document.addEventListener('click', (e) => {
+            const x = e.clientX;
+            const y = e.clientY;
 
-    // Create 12-18 particles
-    for (let i = 0; i < Math.floor(Math.random() * 7 + 12); i++) {
-        clickParticles.push({
-            x: x,
-            y: y,
-            radius: Math.random() * 4 + 2,
-            color: `hsl(320, 80%, ${Math.random() * 30 + 60}%)`, // Purple-pink shades
-            velocityX: Math.random() * 8 - 4,
-            velocityY: Math.random() * 8 - 4,
-            life: 30
+            for (let i = 0; i < Math.floor(Math.random() * 7 + 12); i++) {
+                clickParticles.push({
+                    x: x,
+                    y: y,
+                    radius: Math.random() * 4 + 2,
+                    color: `hsl(320, 80%, ${Math.random() * 30 + 60}%)`,
+                    velocityX: Math.random() * 8 - 4,
+                    velocityY: Math.random() * 8 - 4,
+                    life: 30
+                });
+            }
         });
-    }
-});
 
-window.addEventListener('resize', () => {
-    clickCanvas.width = window.innerWidth;
-    clickCanvas.height = window.innerHeight;
-});
+        window.addEventListener('resize', () => {
+            clickCanvas.width = window.innerWidth;
+            clickCanvas.height = window.innerHeight;
+        });
 
-function animateClickEffect() {
-    clickCtx.clearRect(0, 0, clickCanvas.width, clickCanvas.height);
+        function animateClickEffect() {
+            clickCtx.clearRect(0, 0, clickCanvas.width, clickCanvas.height);
 
-    clickParticles.forEach((p, i) => {
-        p.life--;
-        p.x += p.velocityX;
-        p.y += p.velocityY;
-        p.radius *= 0.95;
+            clickParticles.forEach((p, i) => {
+                p.life--;
+                p.x += p.velocityX;
+                p.y += p.velocityY;
+                p.radius *= 0.95;
 
-        clickCtx.beginPath();
-        clickCtx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
-        clickCtx.fillStyle = p.color;
-        clickCtx.shadowBlur = 20;
-        clickCtx.shadowColor = p.color;
-        clickCtx.globalAlpha = p.life / 30;
-        clickCtx.fill();
+                clickCtx.beginPath();
+                clickCtx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
+                clickCtx.fillStyle = p.color;
+                clickCtx.shadowBlur = 20;
+                clickCtx.shadowColor = p.color;
+                clickCtx.globalAlpha = p.life / 30;
+                clickCtx.fill();
 
-        if (p.life <= 0 || p.radius <= 0.5) {
-            clickParticles.splice(i, 1);
+                if (p.life <= 0 || p.radius <= 0.5) {
+                    clickParticles.splice(i, 1);
+                }
+            });
+
+            clickCtx.globalAlpha = 1;
+            requestAnimationFrame(animateClickEffect);
         }
-    });
 
-    clickCtx.globalAlpha = 1;
-    requestAnimationFrame(animateClickEffect);
-}
-
-animateClickEffect();
-</script>
-<script>
-// Glowing Custom Cursor Follow (no variable conflicts)
-const cursor = document.getElementById('glowing-cursor');
-let currentX = 0;
-let currentY = 0;
-let targetX = 0;
-let targetY = 0;
-
-document.addEventListener('mousemove', (e) => {
-    targetX = e.clientX;
-    targetY = e.clientY;
-});
-
-function animateCursor() {
-    currentX += (targetX - currentX) * 0.3;
-    currentY += (targetY - currentY) * 0.3;
-
-    cursor.style.left = currentX + 'px';
-    cursor.style.top = currentY + 'px';
-
-    requestAnimationFrame(animateCursor);
-}
-
-animateCursor();
-
-// Show/hide on mouse enter/leave
-document.body.addEventListener('mouseenter', () => {
-    cursor.style.opacity = '1';
-});
-
-document.body.addEventListener('mouseleave', () => {
-    cursor.style.opacity = '0';
-});
-</script>
+        animateClickEffect();
+    </script>
 </body>
 </html>
