--- a/index.html
+++ b/index.html
@@ -114,6 +114,32 @@
                 <hr class="divider">
             </section>
 
+            <!-- ==================== ANILIST PROGRESS WIDGET ==================== -->
+<!-- ================================= EDIT HERE ================================= -->
+<!-- 1. CHANGE TITLE: Edit the <h2> text below (e.g. "MY ANIME STATS", "ANILIST", etc.) -->
+<!-- 2. CHANGE USERNAME: Replace "Vir" in the img src URL with your AniList username -->
+<!-- 3. CHANGE LINK: Replace the <a href> with your full AniList profile URL -->
+<!-- 4. CHANGE SIZE: Edit max-width in .anilist-widget (450px = compact, 1000px = full) -->
+<!-- ================================================================== -->
+<section class="section">
+    <h2 class="section-title">ANILIST PROGRESS</h2>  <!-- ← EDIT: Change section title -->
+    <div class="anilist-widget">                     <!-- ← EDIT: Add max-width: 450px; for smaller size -->
+        <!-- ================================= EDIT HERE ================================= -->
+        <!-- LINK: Clickable link to your AniList profile (recommended for UX) -->
+        <!-- URL: https://anilist.co/user/YOUR_USERNAME_HERE/ -->
+        <a href="https://anilist.co/user/Vir/" target="_blank">  <!-- ← EDIT: Your AniList profile link -->
+            <!-- ================================= EDIT HERE ================================= -->
+            <!-- WIDGET URL: https://geniusanime.com/widgets/anilist?username=YOUR_USERNAME -->
+            <!-- Options: Add &theme=dark (if available) or other params from their docs -->
+            <img src="https://geniusanime.com/widgets/anilist?username=Vir"     <!-- ← EDIT: Your username -->
+                 alt="AniList Progress - Days watched, mean score, current anime" 
+                 class="anilist-image">                                        <!-- Uses same class as other widgets -->
+        </a>
+    </div>
+    <hr class="divider">
+</section>
+<!-- ================================================================== -->
+           
             <section class="section">
                 <h2 class="section-title">CURRENTLY PLAYING ON SPOTIFY</h2>
                 <div class="lastfm-widget" style="max-width: 450px; padding: 0; background: transparent; border: none; box-shadow: none;">
