--- a/index.html
+++ b/index.html
@@ -5,45 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vir's Website</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Particles.js from CDN -->
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 </head>
 <body>
-    <!-- Fixed Particles Background -->
+
+    <!-- Top banner text - on top of everything -->
+<div class="top-banner">
+    <p>Open source on my GitHub</a> — feel free to use it, modify it, or get inspired! ✨</p>
+</div>
+
+    <!-- Particles Background -->
     <div id="particles-js"></div>
 
-    <!-- Dark/Light Mode Toggle Button -->
+    <!-- Theme Toggle -->
     <button class="theme-toggle" aria-label="Toggle dark/light mode">
         <svg id="theme-icon" viewBox="0 0 24 24">
             <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
         </svg>
     </button>
 
-    <!-- Glowing Custom Cursor -->
+    <!-- Glowing Cursor -->
     <div id="glowing-cursor"></div>
 
-    <!-- Click Particle Effect Canvas -->
+    <!-- Click Effect Canvas -->
     <canvas id="click-effect"></canvas>
 
     <!-- Main Content -->
     <main class="container">
         <div class="card">
-            <!-- ==================== PROFILE SECTION ==================== -->
-            <section class="profile">
-                <!-- 3D Tilt Avatar -->
+            <!-- ==================== CENTERED PROFILE ==================== -->
+            <section class="profile-hero">
                 <div class="avatar-wrapper">
-                    <!-- EDIT HERE: Change your avatar image URL -->
-                    <img src="https://media.discordapp.net/attachments/901178528798756864/1456183073564524554/ebd907b9d268ab18b7fa6b4afc0574c9.png?ex=69576fab&is=69561e2b&hm=a6299ac3edac2b43a04f384469d55a0f8db77c775e176f86ce6cc184ede0d5f0&=&format=webp&quality=lossless" alt="Avatar" class="avatar">
+                    <img src="https://media.discordapp.net/attachments/901178528798756864/1456183073564524554/ebd907b9d268ab18b7fa6b4afc0574c9.png?ex=69576fab&is=69561e2b&hm=a6299ac3edac2b43a04f384469d55a0f8db77c775e176f86ce6cc184ede0d5f0&=&format=webp&quality=lossless" 
+                         alt="Avatar" class="avatar">
                 </div>
 
-                <div class="info">
-                    <!-- EDIT HERE: Your username (e.g. Discord tag) -->
+                <div class="profile-info">
                     <p class="username">._vir</p>
-
-                    <!-- EDIT HERE: Your name (typing animation will auto-adjust length) -->
                     <h1 class="name typewriter">Vir</h1>
-
-                    <!-- EDIT HERE: Add/remove badges -->
                     <div class="badges">
                         <span class="badge">14-Years-Old</span>
                         <span class="badge">🎂 Oct 13</span>
@@ -51,8 +50,10 @@
                         <span class="badge">ISTP-T</span>
                         <span class="badge">🇮🇹 IT</span>
                     </div>
+                </div>
 
-                    <!-- EDIT HERE: Your bio text -->
+                <div class="bio-section">
+                    <h2 class="section-title bio-title">BIO</h2>
                     <p class="bio">
                         Hey! Hope you're doing well, i'm Vir but you can call me whatever you want if i like it :D.<br>
                         I'm into gaming, tech, music and animes!
@@ -62,11 +63,10 @@
 
             <hr class="divider">
 
-            <!-- ==================== INTERESTS ==================== -->
+            <!-- Interests -->
             <section class="section">
                 <h2 class="section-title">INTERESTS</h2>
                 <div class="pills">
-                    <!-- EDIT HERE: Change or add interests -->
                     <span class="pill">🎵 Music</span>
                     <span class="pill">🍥 Animanga</span>
                     <span class="pill">💻 Tech</span>
@@ -75,11 +75,10 @@
                 <hr class="divider">
             </section>
 
-            <!-- ==================== SOCIAL LINKS ==================== -->
+            <!-- Links -->
             <section class="section">
-                <h2 class="section-title">CONNECT</h2>
+                <h2 class="section-title">LINKS</h2>
                 <div class="social-grid">
-                    <!-- EDIT HERE: Add/remove social links -->
                     <a href="https://discord.com/users/823914932185202728" class="social-btn">
                         <img src="https://cdn.simpleicons.org/discord" alt="Discord" class="social-icon">
                         <span>Discord</span>
@@ -104,20 +103,18 @@
                 <hr class="divider">
             </section>
 
-            <!-- ==================== WIDGETS ==================== -->
+            <!-- Widgets -->
             <section class="section">
                 <h2 class="section-title">DISCORD STATUS</h2>
                 <div class="discord-widget">
-                    <!-- EDIT HERE: Change your Discord user ID -->
                     <img src="https://discord.c99.nl/widget/theme-1/823914932185202728.png" alt="Discord Status" class="discord-banner-widget">
                 </div>
                 <hr class="divider">
             </section>
-
+            
             <section class="section">
                 <h2 class="section-title">CURRENTLY PLAYING ON SPOTIFY</h2>
                 <div class="lastfm-widget" style="max-width: 450px; padding: 0; background: transparent; border: none; box-shadow: none;">
-                    <!-- EDIT HERE: Change your Spotify user ID -->
                     <a href="https://open.spotify.com/user/mrfpf7omss9rmtuuebmymartk" target="_blank" style="display: block; border-radius: 16px; overflow: hidden; box-shadow: 0 8px 30px rgba(0, 0, 0, 0.5);">
                         <img src="https://spotify-github-profile.kittinanx.com/api/view?uid=mrfpf7omss9rmtuuebmymartk&cover_image=true&theme=spotify-embed&show_offline=true&background_color=121212&interchange=false&profanity=false&mode=dark&bar_color=53b14f&bar_color_cover=false"
                              alt="Spotify Currently Playing"
@@ -130,7 +127,6 @@
             <section class="section">
                 <h2 class="section-title">RECENTLY PLAYED ON LAST.FM</h2>
                 <div class="lastfm-widget">
-                    <!-- EDIT HERE: Change your Last.fm username -->
                     <img src="https://lastfm-recently-played.vercel.app/api?user=Virenvo&count=10"
                          alt="Recently Played on Last.fm"
                          class="lastfm-image">
@@ -138,16 +134,20 @@
                 <hr class="divider">
             </section>
 
-            <!-- ==================== FOOTER ==================== -->
+            <!-- Footer -->
             <footer class="footer">
-                <p>Open source on my <a href="https://github.com/Virenvooo/" target="_blank">GitHub</a> — feel free to use it, modify it, or get inspired! ✨</p>
+                <p>Last change made : 01/01/2026 ✨</p>
             </footer>
         </div>
     </main>
 
-    <!-- ==================== ALL SCRIPTS ==================== -->
+    <!-- Floating Character -->
+    <div class="floating-character">
+        <img src="https://cdn.discordapp.com/attachments/901178528798756864/1456305174955163863/2499d94f8a2e18b2665361df7b409335.png?ex=6957e162&is=69568fe2&hm=8456d24ca9ed4599236138e4367628c632a7b6b4dc73a523f1535705949ed7aa&" alt="cute anime mascot">
+    </div>
+
+    <!-- Scripts -->
     <script>
-        // === Particles.js Background ===
         particlesJS("particles-js", {
             particles: {
                 number: { value: 80, density: { enable: true, value_area: 800 } },
@@ -165,7 +165,7 @@
             retina_detect: true
         });
 
-        // === Theme Toggle (Dark/Light Mode) ===
+        // Theme Toggle
         const toggle = document.querySelector('.theme-toggle');
         const icon = document.getElementById('theme-icon');
         const body = document.body;
@@ -188,12 +188,9 @@
             }
         });
 
-        // === Glowing Custom Cursor ===
+        // Glowing Cursor
         const cursor = document.getElementById('glowing-cursor');
-        let currentX = 0;
-        let currentY = 0;
-        let targetX = 0;
-        let targetY = 0;
+        let currentX = 0, currentY = 0, targetX = 0, targetY = 0;
         const easing = 0.25;
 
         document.addEventListener('mousemove', (e) => {
@@ -204,19 +201,15 @@
         function animateCursor() {
             currentX += (targetX - currentX) * easing;
             currentY += (targetY - currentY) * easing;
-
             cursor.style.left = currentX + 'px';
             cursor.style.top = currentY + 'px';
-
             requestAnimationFrame(animateCursor);
         }
-
         animateCursor();
 
         document.body.addEventListener('mouseenter', () => cursor.style.opacity = '1');
         document.body.addEventListener('mouseleave', () => cursor.style.opacity = '0');
 
-        // Bigger glow on hover
         document.querySelectorAll('a, .pill, .social-btn, .avatar-wrapper, .theme-toggle').forEach(el => {
             el.addEventListener('mouseenter', () => {
                 cursor.style.transform = 'translate(-50%, -50%) scale(1.6)';
@@ -228,10 +221,9 @@
             });
         });
 
-        // === 3D Avatar Tilt ===
+        // 3D Avatar Tilt
         const avatarWrapper = document.querySelector('.avatar-wrapper');
         const avatar = document.querySelector('.avatar');
-
         if (avatarWrapper && avatar) {
             avatarWrapper.addEventListener('mousemove', (e) => {
                 const rect = avatarWrapper.getBoundingClientRect();
@@ -239,34 +231,27 @@
                 const y = e.clientY - rect.top;
                 const centerX = rect.width / 2;
                 const centerY = rect.height / 2;
-
                 const rotateY = ((x - centerX) / centerX) * 20;
                 const rotateX = ((centerY - y) / centerY) * 20;
-
                 avatar.style.transform = `rotateY(${rotateY}deg) rotateX(${rotateX}deg) scale(1.08)`;
             });
-
             avatarWrapper.addEventListener('mouseleave', () => {
                 avatar.style.transform = 'rotateY(0) rotateX(0) scale(1)';
             });
         }
 
-        // === Click Particle Burst ===
+        // Click Particles
         const clickCanvas = document.getElementById('click-effect');
         const clickCtx = clickCanvas.getContext('2d');
         clickCanvas.width = window.innerWidth;
         clickCanvas.height = window.innerHeight;
 
         let clickParticles = [];
-
         document.addEventListener('click', (e) => {
-            const x = e.clientX;
-            const y = e.clientY;
-
+            const x = e.clientX, y = e.clientY;
             for (let i = 0; i < Math.floor(Math.random() * 7 + 12); i++) {
                 clickParticles.push({
-                    x: x,
-                    y: y,
+                    x, y,
                     radius: Math.random() * 4 + 2,
                     color: `hsl(320, 80%, ${Math.random() * 30 + 60}%)`,
                     velocityX: Math.random() * 8 - 4,
@@ -283,13 +268,11 @@
 
         function animateClickEffect() {
             clickCtx.clearRect(0, 0, clickCanvas.width, clickCanvas.height);
-
             clickParticles.forEach((p, i) => {
                 p.life--;
                 p.x += p.velocityX;
                 p.y += p.velocityY;
                 p.radius *= 0.95;
-
                 clickCtx.beginPath();
                 clickCtx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
                 clickCtx.fillStyle = p.color;
@@ -297,16 +280,11 @@
                 clickCtx.shadowColor = p.color;
                 clickCtx.globalAlpha = p.life / 30;
                 clickCtx.fill();
-
-                if (p.life <= 0 || p.radius <= 0.5) {
-                    clickParticles.splice(i, 1);
-                }
+                if (p.life <= 0 || p.radius <= 0.5) clickParticles.splice(i, 1);
             });
-
             clickCtx.globalAlpha = 1;
             requestAnimationFrame(animateClickEffect);
         }
-
         animateClickEffect();
     </script>
 </body>
