--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                     <div class="badges">
                         <span class="badge">14-Years-Old</span>
                         <span class="badge">🎂 Oct 13</span>
-                        <span class="badge">he/him</span>
+                        <span class="badge">He/Him</span>
                         <span class="badge">ISTP-T</span>
-                        <span class="badge">🇮🇹 IT</span>
+                        <span class="badge">Italy</span>
                     </div>
                 </div>
 
@@ -131,12 +131,11 @@
                          alt="Recently Played on Last.fm"
                          class="lastfm-image">
                 </div>
-                <hr class="divider">
             </section>
 
             <!-- Footer -->
             <footer class="footer">
-                <p>Last change made : 01/01/2026 ✨</p>
+                <p>Last change made : 01/01/2026 05:17pm✨</p>
             </footer>
         </div>
     </main>
@@ -287,5 +286,6 @@
         }
         animateClickEffect();
     </script>
+    <script src="oneko.js"></script>
 </body>
 </html>
