--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <hr class="divider reveal">
 
             <!-- ==================== FOOTER ==================== -->
-            <!-- EDIT HERE: Update the date when you make changes -->+
+            <!-- EDIT HERE: Update the date when you make changes -->
              <center>
             <footer class="footer">
                 <p>Last change made: 01/01/2026 09:27pm CET ✨</p>
