--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
                 </div>
 
                 <div class="profile-info">
-                    <p class="username">._vir</p>
                     <h1 class="name gradient-text">Vir</h1>
 
                     <div class="badges">
@@ -106,7 +105,7 @@
                         <span>Discord</span>
                     </a>
                     <a href="https://github.com/Virenvooo/" class="social-btn">
-                        <img src="https://cdn.simpleicons.org/github" class="social-icon" alt="GitHub">
+                        <img src="https://cdn.simpleicons.org/github" class="social-icon github-icon">
                         <span>GitHub</span>
                     </a>
                     <a href="https://open.spotify.com/user/mrfpf7omss9rmtuuebmymartk" class="social-btn">
@@ -121,6 +120,8 @@
                         <img src="https://cdn.simpleicons.org/anilist" class="social-icon" alt="AniList">
                         <span>AniList</span>
                     </a>
+                    <a href="https://steamcommunity.com/id/Virenvo" class="social-btn"> <img src="https://cdn.simpleicons.org/steam" 
+                        class="social-icon steam-icon"> <span>Steam</span> </a>
                 </div>
             </section>
 
@@ -226,7 +227,7 @@
         /* GLOWING CUSTOM CURSOR */
         const cursor = document.getElementById('glowing-cursor');
         let currentX = 0, currentY = 0, targetX = 0, targetY = 0;
-        const easing = 0.25;
+        const easing = 0.35;
 
         document.addEventListener('mousemove', (e) => {
             targetX = e.clientX;
