--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Vir's Website</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Particles.js Background -->
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -16,9 +16,6 @@
     <div class="top-banner">
         <p>Open source on my GitHub — feel free to use it, modify it, or get inspired! ✨</p>
     </div>
-
-    <nav class="main-nav">
-  <a href="index.html" class="nav-link active">Home</a>
 </nav>
 
 
@@ -27,25 +24,10 @@
     <canvas id="snow-canvas"></canvas>
     <canvas id="click-effect"></canvas>
 
-    <!-- ==================== UI ELEMENTS ==================== -->
-    <!-- Theme Toggle (Dark/Light Mode) -->
-    <button class="theme-toggle reveal" aria-label="Toggle dark/light mode">
-        <svg id="theme-icon" viewBox="0 0 24 24">
-            <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
-        </svg>
-    </button>
-
-    <!-- Back to Top Button -->
-    <button id="back-to-top" aria-label="Back to top" class="reveal">
-        <svg viewBox="0 0 24 24" width="28" height="28" fill="none" stroke="currentColor" stroke-width="3">
-            <polyline points="18 15 12 9 6 15"></polyline>
-        </svg>
-    </button>
-
     <!-- ==================== FLOATING CHARACTER ==================== -->
     <!-- EDIT HERE: Change the image URL to your preferred anime mascot (transparent PNG best) -->
     <div class="floating-character reveal">
-        <img src="https://i.imgur.com/VAT9BOu.png"
+        <img src="https://i.imgur.com/LDJIvgR.png"
              alt="Cute anime mascot" loading="lazy">
     </div>
 
@@ -57,7 +39,7 @@
             <!-- EDIT HERE: Avatar, username, name, badges, bio -->
             <section class="profile reveal">
                 <div class="avatar-wrapper">
-                    <img src="https://i.imgur.com/4U2QXki.png"
+                    <img src="https://i.imgur.com/8RlCVOA.png"
                          class="avatar" alt="Vir's avatar" loading="lazy">
                 </div>
 
@@ -178,178 +160,148 @@
     </main>
 
     <!-- ==================== ALL SCRIPTS ==================== -->
-    <script>
-        /* PARTICLES.JS */
-        particlesJS("particles-js", {
-            particles: {
-                number: { value: 80, density: { enable: true, value_area: 800 } },
-                color: { value: "#E246A1" },
-                shape: { type: "circle" },
-                opacity: { value: 0.4, random: true },
-                size: { value: 3, random: true },
-                line_linked: { enable: true, distance: 150, color: "#E246A1", opacity: 0.2, width: 1 },
-                move: { enable: true, speed: 1.5 }
+<script>
+    // PARTICLES.JS - starry purple-pink background
+    particlesJS("particles-js", {
+        particles: {
+            number: { value: 70, density: { enable: true, value_area: 800 } },
+            color: { value: ["#9d4edd", "#da3c72", "#bb86fc"] },
+            shape: { type: "circle" },
+            opacity: { value: 0.6, random: true },
+            size: { value: 3.5, random: true },
+            line_linked: { 
+                enable: true, 
+                distance: 140, 
+                color: "#bb86fc", 
+                opacity: 0.35, 
+                width: 1 
             },
-            interactivity: { detect_on: "canvas", events: { onhover: { enable: true, mode: "repulse" } } },
-            retina_detect: true
+            move: { enable: true, speed: 1.4, direction: "none", random: true }
+        },
+        interactivity: {
+            detect_on: "canvas",
+            events: { onhover: { enable: true, mode: "repulse" }, onclick: { enable: false } }
+        },
+        retina_detect: true
+    });
+
+    // 3D AVATAR TILT
+    const avatarWrapper = document.querySelector('.avatar-wrapper');
+    const avatar = document.querySelector('.avatar');
+    if (avatarWrapper && avatar) {
+        avatarWrapper.addEventListener('mousemove', e => {
+            const rect = avatarWrapper.getBoundingClientRect();
+            const x = e.clientX - rect.left;
+            const y = e.clientY - rect.top;
+            const rx = ((rect.height / 2 - y) / (rect.height / 2)) * 20;
+            const ry = ((x - rect.width / 2) / (rect.width / 2)) * 20;
+            avatar.style.transform = `rotateX(${rx}deg) rotateY(${ry}deg) scale(1.08)`;
         });
-
-        /* THEME TOGGLE FIXED (icon changes correctly) */
-const themeToggle = document.querySelector('.theme-toggle');
-const themeIcon = document.getElementById('theme-icon');
-const body = document.body;
-
-// Icone SVG separate
-const moonIcon = '<path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>';
-const sunIcon = '<path d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"/>';
-
-// Carica tema salvato
-if (localStorage.getItem('theme') === 'light') {
-    body.classList.add('light-mode');
-    themeIcon.innerHTML = sunIcon;
-} else {
-    themeIcon.innerHTML = moonIcon;
-}
-
-// Toggle al click
-themeToggle.addEventListener('click', () => {
-    body.classList.toggle('light-mode');
-    if (body.classList.contains('light-mode')) {
-        themeIcon.innerHTML = sunIcon;
-        localStorage.setItem('theme', 'light');
-    } else {
-        themeIcon.innerHTML = moonIcon;
-        localStorage.setItem('theme', 'dark');
+        avatarWrapper.addEventListener('mouseleave', () => {
+            avatar.style.transform = 'rotateX(0) rotateY(0) scale(1)';
+        });
     }
-});
 
-        /* 3D AVATAR TILT */
-        const avatarWrapper = document.querySelector('.avatar-wrapper');
-        const avatar = document.querySelector('.avatar');
-        if (avatarWrapper && avatar) {
-            avatarWrapper.addEventListener('mousemove', e => {
-                const rect = avatarWrapper.getBoundingClientRect();
-                const x = e.clientX - rect.left;
-                const y = e.clientY - rect.top;
-                const rx = ((rect.height / 2 - y) / (rect.height / 2)) * 20;
-                const ry = ((x - rect.width / 2) / (rect.width / 2)) * 20;
-                avatar.style.transform = `rotateX(${rx}deg) rotateY(${ry}deg) scale(1.08)`;
-            });
-            avatarWrapper.addEventListener('mouseleave', () => {
-                avatar.style.transform = 'rotateX(0) rotateY(0) scale(1)';
+    // CLICK PARTICLES - restored and working
+    const clickCanvas = document.getElementById('click-effect');
+    const clickCtx = clickCanvas.getContext('2d');
+    clickCanvas.width = window.innerWidth;
+    clickCanvas.height = window.innerHeight;
+    let clickParticles = [];
+    document.addEventListener('click', e => {
+        for (let i = 0; i < 15; i++) {
+            clickParticles.push({
+                x: e.clientX,
+                y: e.clientY,
+                radius: Math.random() * 4 + 2,
+                color: `hsl(${Math.random() < 0.6 ? 270 : 330}, 85%, ${Math.random() * 25 + 60}%)`,
+                vx: Math.random() * 8 - 4,
+                vy: Math.random() * 8 - 4,
+                life: 30
             });
         }
-
-        /* CLICK PARTICLES */
-        const clickCanvas = document.getElementById('click-effect');
-        const clickCtx = clickCanvas.getContext('2d');
+    });
+    window.addEventListener('resize', () => {
         clickCanvas.width = window.innerWidth;
         clickCanvas.height = window.innerHeight;
-        let particles = [];
-        document.addEventListener('click', e => {
-            for (let i = 0; i < 15; i++) {
-                particles.push({
-                    x: e.clientX,
-                    y: e.clientY,
-                    radius: Math.random() * 4 + 2,
-                    color: `hsl(320, 80%, ${Math.random() * 30 + 60}%)`,
-                    vx: Math.random() * 8 - 4,
-                    vy: Math.random() * 8 - 4,
-                    life: 30
-                });
-            }
-        });
-        window.addEventListener('resize', () => {
-            clickCanvas.width = window.innerWidth;
-            clickCanvas.height = window.innerHeight;
-        });
-        function animateParticles() {
-            clickCtx.clearRect(0, 0, clickCanvas.width, clickCanvas.height);
-            particles.forEach((p, i) => {
-                p.life--;
-                p.x += p.vx;
-                p.y += p.vy;
-                p.radius *= 0.95;
-                clickCtx.beginPath();
-                clickCtx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
-                clickCtx.fillStyle = p.color;
-                clickCtx.shadowBlur = 20;
-                clickCtx.shadowColor = p.color;
-                clickCtx.globalAlpha = p.life / 30;
-                clickCtx.fill();
-                if (p.life <= 0) particles.splice(i, 1);
-            });
-            clickCtx.globalAlpha = 1;
-            requestAnimationFrame(animateParticles);
-        }
-        animateParticles();
-
-        /* BACK TO TOP */
-        const backToTop = document.getElementById('back-to-top');
-        window.addEventListener('scroll', () => backToTop.classList.toggle('visible', window.scrollY > 400));
-        backToTop.addEventListener('click', () => window.scrollTo({ top: 0, behavior: 'smooth' }));
-
-        /* SCROLL REVEAL */
-        const reveals = document.querySelectorAll('.reveal');
-        function reveal() {
-            const trigger = window.innerHeight * 0.85;
-            reveals.forEach(el => el.classList.toggle('visible', el.getBoundingClientRect().top < trigger));
-        }
-        window.addEventListener('scroll', reveal);
-        window.addEventListener('load', reveal);
-
-        /* SNOW EFFECT */
-        const snowCanvas = document.getElementById('snow-canvas');
-        const snowCtx = snowCanvas.getContext('2d');
-        function resizeSnow() {
-            snowCanvas.width = window.innerWidth;
-            snowCanvas.height = window.innerHeight;
-        }
-        resizeSnow();
-        window.addEventListener('resize', resizeSnow);
-        let flakes = [];
-        function createFlake() {
-            flakes.push({
-                x: Math.random() * snowCanvas.width,
-                y: -10,
-                size: Math.random() * 3 + 1,
-                speed: Math.random() * 1 + 0.5,
-                drift: Math.random() * 0.5 - 0.25
-            });
-        }
-        function drawSnow() {
-            snowCtx.clearRect(0, 0, snowCanvas.width, snowCanvas.height);
-            const color = body.classList.contains('light-mode') ? "rgba(0,0,0,0.8)" : "rgba(255,255,255,0.9)";
-            snowCtx.fillStyle = color;
-            flakes.forEach((f, i) => {
-                snowCtx.beginPath();
-                snowCtx.arc(f.x, f.y, f.size, 0, Math.PI * 2);
-                snowCtx.fill();
-                f.y += f.speed;
-                f.x += f.drift;
-                if (f.y > snowCanvas.height) flakes.splice(i, 1);
-            });
-            if (flakes.length < 120) createFlake();
-            requestAnimationFrame(drawSnow);
-        }
-        drawSnow();
-const floatingCharacter = document.querySelector('.floating-character');
-const audio = document.getElementById('player');
-
-if (floatingCharacter && audio) {
-    audio.addEventListener('play', () => {
-        floatingCharacter.classList.add('playing');
     });
+    function animateClick() {
+        clickCtx.clearRect(0, 0, clickCanvas.width, clickCanvas.height);
+        clickParticles.forEach((p, i) => {
+            p.life--;
+            p.x += p.vx;
+            p.y += p.vy;
+            p.radius *= 0.95;
+            clickCtx.beginPath();
+            clickCtx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
+            clickCtx.fillStyle = p.color;
+            clickCtx.shadowBlur = 20;
+            clickCtx.shadowColor = p.color;
+            clickCtx.globalAlpha = p.life / 30;
+            clickCtx.fill();
+            if (p.life <= 0) clickParticles.splice(i, 1);
+        });
+        clickCtx.globalAlpha = 1;
+        requestAnimationFrame(animateClick);
+    }
+    animateClick();
 
-    audio.addEventListener('pause', () => {
-        floatingCharacter.classList.remove('playing');
+    // SCROLL REVEAL
+    const reveals = document.querySelectorAll('.reveal');
+    function reveal() {
+        const trigger = window.innerHeight * 0.85;
+        reveals.forEach(el => el.classList.toggle('visible', el.getBoundingClientRect().top < trigger));
+    }
+    window.addEventListener('scroll', reveal);
+    window.addEventListener('load', reveal);
+
+    // SNOW EFFECT - fully restored
+    const snowCanvas = document.getElementById('snow-canvas');
+    const snowCtx = snowCanvas.getContext('2d');
+    function resizeSnow() {
+        snowCanvas.width = window.innerWidth;
+        snowCanvas.height = window.innerHeight;
+    }
+    resizeSnow();
+    window.addEventListener('resize', resizeSnow);
+    let flakes = [];
+    function createFlake() {
+        flakes.push({
+            x: Math.random() * snowCanvas.width,
+            y: -10,
+            size: Math.random() * 3 + 1,
+            speed: Math.random() * 1 + 0.5,
+            drift: Math.random() * 0.5 - 0.25
+        });
+    }
+    function drawSnow() {
+        snowCtx.clearRect(0, 0, snowCanvas.width, snowCanvas.height);
+        snowCtx.fillStyle = "rgba(255,255,255,0.9)"; // always white snow in dark theme
+        flakes.forEach((f, i) => {
+            snowCtx.beginPath();
+            snowCtx.arc(f.x, f.y, f.size, 0, Math.PI * 2);
+            snowCtx.fill();
+            f.y += f.speed;
+            f.x += f.drift;
+            if (f.y > snowCanvas.height) flakes.splice(i, 1);
+        });
+        if (flakes.length < 120) createFlake();
+        requestAnimationFrame(drawSnow);
+    }
+    drawSnow();
+
+    // Gentle mouse parallax on card
+    const card = document.querySelector('.card');
+    document.addEventListener('mousemove', (e) => {
+        if (!card) return;
+        const { clientX, clientY } = e;
+        const x = (clientX / window.innerWidth - 0.5) * 20;
+        const y = (clientY / window.innerHeight - 0.5) * 20;
+        card.style.transform = `perspective(1200px) rotateY(${x}deg) rotateX(${-y}deg) translateZ(0)`;
     });
-}
+</script>
 
-
-    </script>
-
-    <!-- ONEKO CAT -->
-    <script src="oneko.js"></script>
+<!-- ONEKO CAT -->
+<script src="oneko.js"></script>
 </body>
 </html>
